[Views] Added Selection on Undo

Previously, after a section of text was removed and the removal was
undone, the cursor was placed after the text. The desired behavior
would be a selection of the re-placed text. This change saves the
current selection range on delete or replace. The selection range is
then restored on undo.

Changed tests:
  - TextfieldModelTest.UndoRedo_CutCopyPasteTest
  - OmniboxViewTest.UndoRedo
Added tests:
  - TextfieldModelTest.Undo_SelectionTest

Bug: 615345
Change-Id: I9ce001099de7175da688a993ed3bfd29d296660c
Reviewed-on: https://chromium-review.googlesource.com/1066675
Commit-Queue: Tessa Nijssen <tnijssen@google.com>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561338}
Former-commit-id: 39f2467ad15b66d6e4dd1714f405d4aefa3c9aca